--- a/SaveEyes/SaveEyes.csproj
+++ b/SaveEyes/SaveEyes.csproj
@@ -69,6 +69,12 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Data\ProductPartial.cs" />
+    <Compile Include="Windows\AgentWindow.xaml.cs">
+      <DependentUpon>AgentWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\ChangePriorityWindow.xaml.cs">
+      <DependentUpon>ChangePriorityWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\ProductCountWindow.xaml.cs">
       <DependentUpon>ProductCountWindow.xaml</DependentUpon>
     </Compile>
@@ -142,6 +148,14 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Pages\AgentsListPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\AgentWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\ChangePriorityWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
